--- a/app.css
+++ b/app.css
@@ -1,27 +1,68 @@
 body{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
-}
+    padding: 0;}
+
+aside{
+    background:white;
+    height: 100vh;
+    margin: 0,5em;
+    width: 15vw;}
+
+div{
+    background: beige;
+    height: 10%;
+    justify-content: space-evenly;
+    margin: 0.5em auto;
+    width: 100%;}
+
+header{
+    background: bisque;
+    height: 15vh;
+    position: absolute;
+    right: 2em;
+    top: 0;
+    width: 80vw;}
+
 main{
-    background: black;
+    background: bisque;
+    font-family:Arial, Helvetica, sans-serif; 
     grid-template-columns: repeat(12,1fr);
     height: 100vh;
     width: 100vw;
-    display: grid;
-    
-}
-aside{
-    background: blue;
-    height: 100vh;
-    margin: 0,5em;
-    width: 20vw;
-}
+    display: grid;}
+
 section{
     background: white;
-    height: 75vh;
+    height: 80vh;
     position: absolute;
     bottom: 0;
     right: 2em;
-    width: 75vw;
-}
+    width: 80vw;}
+
+#foto{background: gray;
+    border-radius: 50%;
+    height: 3em;
+    position: absolute;
+    right: 1em;
+    top:1em;
+    width: 3em;}
+    #head-section{
+        background: beige;
+        height: 35%;
+        justify-content: space-evenly;
+        margin: 0.5em auto;
+        width: 100%;}
+
+#live-uni{color: gray;
+    position: absolute;
+    right: 4.5em;
+    top:2em;}
+
+
+#teacher-name{
+    position: absolute;
+    right: 3em;
+    top:0;}
+
+
