making logo images

--- a/app.css
+++ b/app.css
@@ -66,4 +66,10 @@ section{
     right: 3em;
     top:0;}
 
+    /*font-colors*/
+    .font-blue{color:#029ba0;}
+    .font-gold{color:#dea727;}
+    .font-light-gray{color:#9b9b9b;}
+
+
 
