making logo images

--- a/app.css
+++ b/app.css
@@ -70,6 +70,7 @@ section{
     .font-blue{color:#029ba0;}
     .font-gold{color:#dea727;}
     .font-light-gray{color:#9b9b9b;}
+    .font-dark-gray{color:#4a4a4a;}
 
 
 
