--- a/app.css
+++ b/app.css
@@ -1,8 +1,8 @@
-/*elementos*/
+/*elrementos*/
 aside{
     background:white;
-    height: 100vh;
-    margin: 0,5em;
+    height: 140vh;
+    margin: 0,5rem;
     width: 15vw;}
 
 body{
@@ -15,14 +15,15 @@ header{
     background: fcfcfc;
     height: 15vh;
     position: absolute;
-    right: 2em;
+    right: 2rem;
     top: 0;
     width: 80vw;}
 
 main{
     background: #fcfcfc;
+    display: grid;
     font-family:sans-serif; 
-    grid-template-columns: repeat(12,1fr);
+    grid-template-columns: 2fr;
     height: 100vh;
     width: 100vw;
     display: grid;}
@@ -36,46 +37,67 @@ section{
     padding: 0;
     position: absolute;
     bottom: 0;
-    right: 2em;
+    right: 2rem;
     width: 80vw;}
- 
+.aside-colabs{
+    height: 3rem;
+    width: 100%;
+}
+.aside-cursos{}
 
 #data-curso{background: #fcfcfc;
             box-sizing: border-box;
             border-radius: 50%;
             color:#029ba0;
-            font-size: 1.5em;
+            font-size: 1rem;
             font-weight:100;
-            height:3em;
+            height:3rem;
             justify-content:center;
-            padding:0.3em;
-            width:3em;
+            padding:0.3rem;
+            width:3rem;
             text-align:center;}    
 
 #foto{background:#fcfcfc;
       border-radius: 50%;
-      height: 3em;
+      height: 3rem;
       position: absolute;
-      right: 1em;
-      top:1em;
-      width: 3em;}
+      right: 1rem;
+      top:1rem;
+      width: 3rem;}
    
 #head-section{
      background: cyan;
      border-radius: 5px;
      height: 30%;
      margin-top: 0;
-     position: relative;
-     top:0em;
+     display:grid;
+     grid-template-columns: 50% 50%;
      width: 100%;}
-    
+#head-section_cursos{
+    background: cyan;
+    border-radius: 5px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:lighter;
+    height: 20%;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    width: 50%;}
+
+#head-section_pesquisa{
+    background: cyan;
+    border-radius: 5px;
+    height: 30%;
+    width: 50%;}    
 #livelogo{
-    width: 100%;}    
+    width: 100%;}
+#livelogoMobile{
+    width:30vh;
+    visibility:hidden;}        
 
 #live-uni{color:#9b9b9b;
     position: absolute;
-    right: 4.5em;
-    top:2em;
+    right: 4.5rem;
+    top:2rem;
     font-weight:lighter;}
 .materia{
     background: cyan;
@@ -89,7 +111,7 @@ section{
 
 #teacher-name{
     position: absolute;
-    right: 3em;
+    right: 3rem;
     top:0;
     font-weight:lighter;}
 
@@ -101,11 +123,15 @@ section{
     box-sizing: border-box;
     color: #029ba0;
     font-weight: bold;
-    height: 2.5em;
-    margin-right: 1em;
-    margin-top: 1.5em;
-    width: 7em;}
-
+    height: 2.5rem;
+    margin-right: 1rem;
+    margin-top: 1.5rem;
+    width: 7rem;}
+.btn-search{
+    background: url(./images/search-icon-hi.png);
+    background-size: 100% 100%;
+    height: 1.5rem;
+    width: 1.5rem;}
 
     /*font-colors*/
     .font-blue{color:#029ba0;}
