--- a/app.css
+++ b/app.css
@@ -4,20 +4,6 @@ body{
     margin: 0;
     padding: 0;}
 
-
-header{
-    background: fcfcfc;
-    height: 15vh;
-    position: absolute;
-    right: 2rem;
-    top: 0;
-    width: 80vw;}
-
-aside{
-    background:white;
-    height: 140vh;
-    width: 15vw;}
-
 main{
     background: #fcfcfc;
     display: grid;
@@ -27,17 +13,45 @@ main{
     margin: 0 auto;
     width: 100vw;
     }
-
-section{
-    background: white;
-    border-radius: 5px;
-    box-sizing: border-box;
-    height: 80vh;
-    margin: 0;
-    margin-top:15vh;
-    padding: 0;
+header{
+    background: fcfcfc;
+    height: 30vh;
+    position:absolute;
+    right: 2rem;
+    top: 0;
     width: 80vw;}
+.header__teacher-name{
+    color:#029ba0;
+    position: absolute;
+    right: 5rem;
+    top:0;
+    font-weight:lighter;}
 
+.header__live-uni{color:#9b9b9b;
+    position: absolute;
+    right: 5rem;
+    top:2rem;
+    font-weight:lighter;}
+
+.header__foto{background:gray;
+    border-radius: 50%;
+    height: 3rem;
+    position: absolute;
+    right: 1rem;
+    top:1rem;
+    width: 3rem;}
+     
+.livelogoMobile{
+    width:30vh;
+    visibility:hidden;}  
+     
+aside{
+    background:white;
+    height: 140vh;
+    width: 15vw;}
+    
+.aside__livelogo{
+        width: 100%;}    
 .aside-colabs{
     box-sizing: border-box;
     height: 3rem;
@@ -45,97 +59,152 @@ section{
     margin-top: 7rem;
     width: 100%;}
 
+.aside-colabs:hover{ 
+    border-left: solid #dea727 4px ;
+    box-sizing: border-box;
+    height: 3rem;
+    margin:0;
+    margin-top: 7rem;
+    padding-left: 2rem;
+    width: 100%;}   
+
+    
+
 .aside-cursos{ 
     box-sizing: border-box;
     height: 3rem;
     margin-left:1rem;
     width: 100%;}
 
+.aside-cursos:hover{ 
+    border-left: solid #029ba0 4px ;
+    box-sizing: border-box;
+    height: 3rem;
+    margin: 0;
+    padding-left:2rem; 
+    width: 100%;}    
+
 .aside-icons{
     color: #000;
     font-weight: 510;
     height: 2rem;
-    width: 2rem;
+    width: 2.3rem;
     text-decoration: none;
 }
 
-#data-curso{background: #fcfcfc;
+section{
+    background: white;
+    border-radius: 5px;
+    box-sizing: border-box;
+    height: 80vh;
+    margin: 0;
+    margin-top:30vh;
+    padding: 0;
+    position: relative;
+    width: 80vw;}
+
+.section__head{
+    background:#fff;
+    border-radius: 5px;
+    height: 30%;
+    margin-top: 0;
+    display:grid;
+    grid-template-columns: 50% 50%;
+    width: 100%;}
+
+.section__head-cursos{
+   background: #fff;
+   border-radius: 5px;
+   color: #dea727;
+   font-family:monospace;
+   font-weight:lighter;
+   font-size: 2.5rem;
+   height: 20%;
+   padding-left: 1rem;
+   padding-top: 1rem;
+   width: 50%;}
+
+.section__head-pesquisa{
+   background: #fefefe;
+   border: solid 1px gray;
+   border-radius: 5px;
+   position: absolute;
+   top: 15%;
+   right: 5%;
+}
+
+.section__btn-pesquisa{
+    background: url(./images/search-icon-hi.png);
+    background-size: 100% 100%;
+    border: #fefefe;
+    border: hidden #fff;
+    height: 1.3rem;
+    margin-right:1rem;
+    margin-top: 0.5rem;
+    outline:none; 
+    width: 1.2rem;}
+.section__input-pesquisa{
+    border: #fefefe;
+    font-size: 1.5rem;
+    height: 1rem;
+    margin-left:1.2rem;
+    margin-bottom: 0.8rem;
+    outline:none; 
+    width: 14rem;
+    }
+
+.materia{
+    background:#fff;
+    height:15%;
+    margin:3px auto;
+    position: relative;
+    width: 100%;}    
+
+.materia__data-curso{background: #fcfcfc;
             box-sizing: border-box;
             border-radius: 50%;
             color:#029ba0;
             font-size: 1rem;
             font-weight:100;
             height:3rem;
-            justify-content:center;
             padding:0.3rem;
+            position: absolute;
+            top: 50%;
+            left: 4%;
             width:3rem;
-            text-align:center;}    
-
-#foto{background:#fcfcfc;
-      border-radius: 50%;
-      height: 3rem;
-      position: absolute;
-      right: 1rem;
-      top:1rem;
-      width: 3rem;}
-   
-#head-section{
-     background:#fff;
-     border-radius: 5px;
-     height: 30%;
-     margin-top: 0;
-     display:grid;
-     grid-template-columns: 50% 50%;
-     width: 100%;}
-#head-section_cursos{
-    background: #fff;
-    border-radius: 5px;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight:lighter;
-    height: 20%;
-    padding-left: 1rem;
-    padding-top: 1rem;
-    width: 50%;}
-
-#head-section_pesquisa{
-    background: #fefefe;
-    border: solid 1px gray;
-    border-radius: 5px;
+            text-align:center;
+            -ms-transform: translate(-4%, -50%);
+            transform: translate(-4%, -50%);
+        } 
+        
+.materia__curso{
     position: absolute;
-    top: 11rem ;
-    right: 3rem;
+    top: 50%;
+    left: 20%;
+    width:18rem;
+    text-align:left;
+    -ms-transform: translate(-20%, -50%);
+    transform: translate(-20%, -50%);
 }
-   
-#livelogo{
-    width: 100%;}
-
-.livelogoMobile{
-    width:30vh;
-    visibility:hidden;}        
-
-#live-uni{color:#9b9b9b;
+.materia__curso-elementos{
+    color:gray;
+    margin-bottom:-1rem;
+}
+.materia__colaboradores{
     position: absolute;
-    right: 4.5rem;
-    top:2rem;
-    font-weight:lighter;}
-.materia{
-    background: #fff;
-    height:20%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin:3px auto;
-    position: relative;
-    width: 100%;}    
-
-#teacher-name{
-    position: absolute;
-    right: 3rem;
-    top:0;
-    font-weight:lighter;}
-
-
-.btn-abrir{
+    top: 50%;
+    left: 60%;
+    width:18rem;
+    text-align:center;
+    -ms-transform: translate(-60%, -50%);
+    transform: translate(-60%, -50%);
+} 
+.materia__colaboradores-elementos{
+    color:#dea727;
+    font-family: monospace;
+    font-size: 3rem;
+}
+.materia__btn--abrir{
     background: #fcfcfc;
     border: #fff;
     border-radius: 10%;
@@ -143,24 +212,17 @@ section{
     color: #029ba0;
     font-weight: bold;
     height: 2.5rem;
-    margin-right: 1rem;
-    margin-top: 1.5rem;
-    width: 7rem;}
-.btn-search{
-    background: url(./images/search-icon-hi.png);
-    background-size: 100% 100%;
-    border: #fefefe;
-    height: 1.5rem;
-    margin: 5px;
-    width: 1.5rem;}
-.input-search{
-    border: #fefefe;
-    font-size: 1.5rem;
-    margin: 5px;
-    margin-left: 20px;
-    }
+    position: absolute;
+    top: 50%;
+    left: 95%;
+    width: 7rem;
+    text-align:center;
+    -ms-transform: translate(-95%, -50%);
+    transform: translate(-95%, -50%);
+}       
         
-    
+
+
     .font-blue{color:#029ba0;}
     .font-gold{color:#dea727;}
     .font-light-gray{color:#9b9b9b;}
@@ -175,6 +237,7 @@ section{
              visibility:collapse;
          }
         .livelogoMobile{
+            visibility: visible;
             width: 12rem;
         
         }
