--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@ main{
     display: grid;
     font-family:sans-serif; 
     grid-template-columns:17% 80%;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
     width: 100vw;
     }
@@ -47,7 +47,7 @@ header{
      
 aside{
     background:white;
-    height: 140vh;
+    height: 130%;
     width: 15vw;}
     
 .aside__livelogo{
@@ -96,7 +96,7 @@ section{
     background: white;
     border-radius: 5px;
     box-sizing: border-box;
-    height: 80vh;
+    height: 90vh;
     margin: 0;
     margin-top:30vh;
     padding: 0;
@@ -155,7 +155,7 @@ section{
 
 .materia{
     background:#fff;
-    height:15%;
+    height:13%;
     margin:3px auto;
     position: relative;
     width: 100%;}    
@@ -181,7 +181,7 @@ section{
     position: absolute;
     top: 50%;
     left: 20%;
-    width:18rem;
+    width:20rem;
     text-align:left;
     -ms-transform: translate(-20%, -50%);
     transform: translate(-20%, -50%);
@@ -231,15 +231,14 @@ section{
     .shadow{box-shadow:2px 2px 2px 2px grey  }
 
     
-    @media (max-width:400px){
+    @media  (max-width:400px){
        
          aside{
-             visibility:collapse;
+             visibility:hidden;
          }
-        .livelogoMobile{
-            visibility: visible;
-            width: 12rem;
-        
+       
         }
-    }
+    
+
+   
 
