--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@ body{
 
 main{
     background: #fcfcfc;
+    box-sizing: border-box;
     display: grid;
     font-family:sans-serif; 
     grid-template-columns:17% 80%;
@@ -22,12 +23,15 @@ header{
     width: 80vw;}
 .header__teacher-name{
     color:#029ba0;
+    font-size: 1.5rem;
     position: absolute;
     right: 5rem;
     top:0;
     font-weight:lighter;}
 
-.header__live-uni{color:#9b9b9b;
+.header__live-uni{
+    color:#9b9b9b;
+    font-size: 1rem;
     position: absolute;
     right: 5rem;
     top:2rem;
@@ -37,17 +41,22 @@ header{
     border-radius: 50%;
     height: 3rem;
     position: absolute;
-    right: 1rem;
-    top:1rem;
+    right: 2%;;
+    top:10%;
     width: 3rem;}
      
 .livelogoMobile{
-    width:30vh;
+    width:20vh;
+    position: absolute;
+    top:30%;
     visibility:hidden;}  
      
 aside{
     background:white;
-    height: 130%;
+    box-shadow: gray 1px 2px 1px 2px;
+    display: grid;
+    grid-template-rows: 35% 7% 7%;
+    height: 100%;
     width: 15vw;}
     
 .aside__livelogo{
@@ -56,7 +65,6 @@ aside{
     box-sizing: border-box;
     height: 3rem;
     margin-left:1rem;
-    margin-top: 7rem;
     width: 100%;}
 
 .aside-colabs:hover{ 
@@ -64,7 +72,6 @@ aside{
     box-sizing: border-box;
     height: 3rem;
     margin:0;
-    margin-top: 7rem;
     padding-left: 2rem;
     width: 100%;}   
 
@@ -95,12 +102,12 @@ aside{
 section{
     background: white;
     border-radius: 5px;
+    box-shadow: 0 0 8px;
     box-sizing: border-box;
-    height: 90vh;
+    height: 100%;
     margin: 0;
-    margin-top:30vh;
-    padding: 0;
-    position: relative;
+    bottom: 0;
+    right: 2vw;
     width: 80vw;}
 
 .section__head{
@@ -110,7 +117,7 @@ section{
     margin-top: 0;
     display:grid;
     grid-template-columns: 50% 50%;
-    width: 100%;}
+    width: 70%;}
 
 .section__head-cursos{
    background: #fff;
@@ -119,10 +126,22 @@ section{
    font-family:monospace;
    font-weight:lighter;
    font-size: 2.5rem;
+   margin: 2rem;
    height: 20%;
-   padding-left: 1rem;
-   padding-top: 1rem;
    width: 50%;}
+
+.section__head-checklist{
+    border-radius: 5px;
+    color: #dea727;
+    font-family:sans-serif;
+    font-weight:lighter;
+    font-size: 1.5rem;
+    margin-bottom: -0.5rem;
+    margin-left: 1rem;
+     
+    
+}
+
 
 .section__head-pesquisa{
    background: #fefefe;
@@ -143,6 +162,8 @@ section{
     margin-top: 0.5rem;
     outline:none; 
     width: 1.2rem;}
+
+
 .section__input-pesquisa{
     border: #fefefe;
     font-size: 1.5rem;
@@ -158,7 +179,11 @@ section{
     height:13%;
     margin:3px auto;
     position: relative;
-    width: 100%;}    
+    width: 100%;}  
+th{
+    width: 50%;
+    text-align: left;
+}      
 
 .materia__data-curso{background: #fcfcfc;
             box-sizing: border-box;
@@ -185,6 +210,14 @@ section{
     text-align:left;
     -ms-transform: translate(-20%, -50%);
     transform: translate(-20%, -50%);
+}
+
+.materia__info-aluno{
+    position: absolute;
+    top: 50%;
+    left: -15%;
+    width:20rem;
+    text-align:left;
 }
 .materia__curso-elementos{
     color:gray;
@@ -221,18 +254,59 @@ section{
     transform: translate(-95%, -50%);
 }       
         
-@media  (max-width: 400px){
+@media  (max-width: 770px){
     aside{
         visibility: hidden;}
+   
+   
     .livelogoMobile {
-        visibility: visible} 
+        width: 70%;
+        position:absolute;
+        top:3rem;
+        visibility: visible;
+       
+    }
+    
+    .section__head-pesquisa{
+        background: #fefefe;
+        border: solid 1px gray;
+        border-radius: 5px;
+        display: grid;
+        grid-template-columns: 80% 20%;
+        top: 15%;
+        width: 50%;
     }
 
-   /* .font-blue{color:#029ba0;}
-    .font-gold{color:#dea727;}
-    .font-light-gray{color:#9b9b9b;}
-    .font-dark-gray{color:#4a4a4a;}
-    .shadow{box-shadow:2px 2px 2px 2px grey  }*/
+    .section__input-pesquisa{
+        border: #fefefe;
+        font-size: 0.8rem;
+        height: 1rem;
+        outline:none; 
+        width: 7rem;
+        }
+    .section__btn-pesquisa{
+        background: url(./images/search-icon-hi.png);
+        background-size: 100% 100%;
+        border: #fefefe;
+        border: hidden #fff;
+        height: 0.8rem;
+        outline:none; 
+        width: 0.2;}
+
+    .materia__data-curso{
+        visibility: hidden;
+    } 
+    .materia__colaboradores{
+        visibility: hidden;}
+
+    .materia__curso-elementos{
+        font-size: 0.8rem;
+        color:gray;
+        margin-bottom:-1rem;
+    }    
+}
+
+    
 
     
     
