--- a/app.css
+++ b/app.css
@@ -11,39 +11,51 @@ main{
     font-family:sans-serif; 
     grid-template-columns:17% 80%;
     height: 100%;
-    margin: 0 auto;
+    margin: 0;
+    padding:0; 
     width: 100vw;
     }
 header{
     background: fcfcfc;
+    display: grid;
     height: 30vh;
-    position:absolute;
-    right: 2rem;
-    top: 0;
-    width: 80vw;}
+    grid-template-columns: 90% 10%;    
+    position: fixed;
+    top: 1rem;
+    right: 0.5rem;
+    width: 80vw;
+    text-align: end;
+}
 .header__teacher-name{
+    box-sizing: border-box;
     color:#029ba0;
     font-size: 1.5rem;
-    position: absolute;
-    right: 5rem;
-    top:0;
-    font-weight:lighter;}
+    font-weight:lighter;
+    margin: 0;
+    margin-right: 1rem;
+    padding:0; 
+
+}
 
 .header__live-uni{
+    box-sizing: border-box;
     color:#9b9b9b;
     font-size: 1rem;
-    position: absolute;
-    right: 5rem;
-    top:2rem;
-    font-weight:lighter;}
+    font-weight:lighter;
+    margin: 0;
+    margin-right: 1rem;
+    padding:0; 
 
-.header__foto{background:gray;
-    border-radius: 50%;
+}
+
+.header__foto{
+    background:#ececec;
     height: 3rem;
-    position: absolute;
-    right: 2%;;
-    top:10%;
-    width: 3rem;}
+    justify-content:right;
+    margin-right: 2vw;
+    width: 5rem;
+    right: 0.5rem;
+}
      
 .livelogoMobile{
     width:20vh;
@@ -100,15 +112,23 @@ aside{
 }
 
 section{
-    background: white;
+    align-content: start;
+    bottom: 0;
+    box-sizing: border-box;
     border-radius: 5px;
     box-shadow: 0 0 8px;
-    box-sizing: border-box;
-    height: 100%;
+    display: grid;
+    grid-template-rows: 
+    10%,10%,10%,10%,10%,10%,10%;
+    height: 70vh;
     margin: 0;
-    bottom: 0;
-    right: 2vw;
-    width: 80vw;}
+    padding: 0;
+    margin-right: 2vw;
+    position: fixed;
+    right: 0.5rem;
+    width: 80vw;
+
+}
 
 .section__head{
     background:#fff;
@@ -151,7 +171,7 @@ section{
    height: 2rem;
    justify-content: space-between;
    opacity: 0.9;
-   width: 20rem;
+   width: 100%;
 }
 
 .section__btn-pesquisa{
@@ -160,20 +180,20 @@ section{
     background-size: 100% 100%;
     border: #fefefe;
     border: none;
-    height: 1.3rem;
+    height: 50%;
     margin: 5px;
-    margin-right: 10px;
+    margin-right: 2%;
     outline:none; 
-    width: 1.2rem;}
+    width: 3%;}
 
 
 .section__input-pesquisa{
     border: #fefefe;
-    font-size: 1.5rem;
+    font-size: 100%;
     height: 1.5rem;
     margin-left: 1rem;
     outline:none; 
-    width: 14rem;
+    width: 100%;
     }
 
 .materia{
