--- a/app.css
+++ b/app.css
@@ -1,292 +1,22 @@
-/*elrementos*/
-body{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;}
-
-main{
-    background: #fcfcfc;
-    box-sizing: border-box;
-    display: grid;
-    font-family:sans-serif; 
-    grid-template-columns:17% 80%;
-    height: 100%;
-    margin: 0;
-    padding:0; 
-    width: 100vw;
-    }
-header{
-    background: fcfcfc;
-    display: grid;
-    height: 30vh;
-    grid-template-columns: 90% 10%;    
-    position: fixed;
-    top: 1rem;
-    right: 0.5rem;
-    width: 80vw;
-    text-align: end;
-}
-.header__teacher-name{
-    box-sizing: border-box;
-    color:#029ba0;
-    font-size: 150%;
-    font-weight:lighter;
-    margin: 0;
-    margin-right: 1rem;
-    padding:0; 
-
-}
-
-.header__live-uni{
-    box-sizing: border-box;
-    color:#9b9b9b;
-    font-size: 1rem;
-    font-weight:lighter;
-    margin: 0;
-    margin-right: 1rem;
-    padding:0; 
-
-}
-
-.header__foto{
-    background:#ececec;
-    height: 3rem;
-    justify-content:right;
-    margin-right: 2vw;
-    width: 5rem;
-    right: 0.5rem;
-}
-     
-.livelogoMobile{
-    width:20vh;
-    position: absolute;
-    top:30%;
-    visibility:hidden;}  
-     
-aside{
-    grid-template-columns:1fr;
-    position: fixed;
-    bottom: 0;
-    background:white;
-    box-shadow: 0 0 8px;
-    display: grid;
-    grid-template-rows: 35% 10% 10%;
-    height: 100%;
-    width: 15%;
-}
-    
-.aside__livelogo{
-        width: 100%;
-    }    
-.aside-colabs{
-    box-sizing: border-box;
-    height: 3rem;
-    margin-left:1rem;
-    width: 100%;}
-
-.aside-colabs:hover{ 
-    border-left: solid #dea727 4px ;
-    box-sizing: border-box;
-    height: 3rem;
-    margin:0;
-    padding-left: 2rem;
-    width: 100%;}   
-
-    
-
-.aside-cursos{ 
-    box-sizing: border-box;
-    height: 3rem;
-    margin-left:1rem;
-    width: 100%;}
-
-.aside-cursos:hover{ 
-    border-left: solid #029ba0 4px ;
-    box-sizing: border-box;
-    height: 3rem;
-    margin: 0;
-    padding-left:2rem; 
-    width: 100%;}    
-
-.aside-icons{
-    color: #000;
-    font-weight: 510;
-    height: 60%;
-    width: 12%;
-    text-decoration: none;
-}
-
-section{
+.content{
     align-content: start;
-    bottom: 0;
+    background: palegoldenrod;
     box-sizing: border-box;
-    border-radius: 5px;
-    box-shadow: 0 0 8px;
     display: grid;
-    grid-template-rows: 
-    10%,10%,10%,10%,10%,10%,10%;
-    height: 70vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
-    margin-right: 2vw;
-    position: fixed;
-    right: 0.5rem;
-    width: 80vw;
-
-}
-
-.section__head{
-    background:#fff;
-    border-radius: 5px;
-    height: 30%;
-    margin-top: 0;
-    display:grid;
-    grid-template-columns: 50% 50%;
-    width: 70%;}
-
-.section__head-cursos{
-   background: #fff;
-   border-radius: 5px;
-   color: #dea727;
-   font-family:monospace;
-   font-weight:lighter;
-   font-size: 2.5rem;
-   margin: 2rem;
-   height: 20%;
-   width: 50%;}
-
-.section__head-checklist{
-    border-radius: 5px;
-    color: #dea727;
-    font-family:sans-serif;
-    font-weight:lighter;
-    font-size: 1.5rem;
-    margin-bottom: -0.5rem;
-    margin-left: 1rem;
-     
-    
-}
-
-
-.section__head-pesquisa{
-   background: #fefefe;
-   border: solid 1px #dddddd;
-   border-radius: 5px;
-   display: flex;
-   height: 2rem;
-   justify-content: space-between;
-   opacity: 0.9;
-   width: 100%;
-}
-
-.section__btn-pesquisa{
-    align-content: center;
-    background: url(./images/search-icon-hi.png);
-    background-size: 100% 100%;
-    border: #fefefe;
-    border: none;
-    height: 50%;
-    margin: 5px;
-    margin-right: 2%;
-    outline:none; 
-    width: 3%;}
-
-
-.section__input-pesquisa{
-    border: #fefefe;
-    font-size: 100%;
-    height: 1.5rem;
-    margin-left: 1rem;
-    outline:none; 
-    width: 100%;
-    }
-
-.materia{
-    background:#fff;
-    height:13%;
-    margin:3px auto;
     position: relative;
-    width: 100%;}  
-th{
-    width: 50%;
-    text-align: left;
-}      
-
-.materia__data-curso{background: #fcfcfc;
-            box-sizing: border-box;
-            border-radius: 50%;
-            color:#029ba0;
-            font-size: 1rem;
-            font-weight:100;
-            height:3rem;
-            padding:0.3rem;
-            position: absolute;
-            top: 50%;
-            left: 4%;
-            width:3rem;
-            text-align:center;
-            -ms-transform: translate(-4%, -50%);
-            transform: translate(-4%, -50%);
-        } 
-        
-.materia__curso{
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    width:20rem;
-    text-align:left;
-    -ms-transform: translate(-20%, -50%);
-    transform: translate(-20%, -50%);
+    width: 100vw;
 }
-
-.materia__info-aluno{
-    position: absolute;
-    top: 50%;
-    left: -15%;
-    width:20rem;
-    text-align:left;
-}
-.materia__curso-elementos{
-    color:gray;
-    margin-bottom:-1rem;
-}
-.materia__colaboradores{
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    width:18rem;
-    text-align:center;
-    -ms-transform: translate(-60%, -50%);
-    transform: translate(-60%, -50%);
-} 
-.materia__colaboradores-elementos{
-    color:#dea727;
-    font-family: monospace;
-    font-size: 3rem;
-}
-.materia__btn--abrir{
-    background: #fcfcfc;
-    border: #fff;
-    border-radius: 10%;
+.logo{
+    background: url(./images/livelogoMobile.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
     box-sizing: border-box;
-    color: #029ba0;
-    font-weight: bold;
-    height: 2.5rem;
-    position: absolute;
-    top: 50%;
-    left: 95%;
-    width: 7rem;
-    text-align:center;
-    -ms-transform: translate(-95%, -50%);
-    transform: translate(-95%, -50%);
-}       
-        
+    height: 35px;
+    margin: 0;
+    padding: 0;
+    width: 50%;
 
-
-    
-
-    
-    
-
-   
-
+}
