--- a/app.css
+++ b/app.css
@@ -3,7 +3,6 @@ body{
     margin: 0;
     padding: 0;
 }
-button{box-shadow: none;}
 
 .content{
     align-content: start;
@@ -11,12 +10,15 @@ button{box-shadow: none;}
     box-sizing: border-box;
     display: grid;
     font-family: sans-serif;
+    grid-row-gap: 1%;
     height: 100vh;
     margin: 0;
     padding: 0;
     width: 100vw;
 }
+/*inicio livelogo e botoes*/
 .row1mob{
+    background: #fff;
     display: grid;
     grid-template-columns: 50% 15% 15%;
     height: 50%;
@@ -56,11 +58,57 @@ button{box-shadow: none;}
 }
 .cursos:active{
     border-bottom: solid 3px #029ba0;}
-    
+    /*fim livelogo e botoes*/
+.row2{
+    background: #fff;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 100%;
+    justify-content:flex-end;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}  
+.profname{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.ric{
+    box-sizing: border-box;
+    color: #029ba0;
+    font-weight: lighter;
+    margin: 0;
+    padding: 0;
+}
+.liv{
+    box-sizing: border-box;
+    font-weight: lighter;
+    color: grey;
+    margin: 0;
+    padding: 0;
+}
+.profoto{
+    background: url(./images/teacher-name.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 20%;
+}
+
     
     @media screen and (min-width:420px){
         .row1mob,.logo,.colab,.cursos{
             visibility: hidden;
+        }
+        .profoto{
+            background: url(./images/teacher-name.png);
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            height: 150%;
+            width: 10%;
         }
     }
     
