--- a/app.css
+++ b/app.css
@@ -1,3 +1,5 @@
+@import "./_botoes.css";
+
 body{
     box-sizing: border-box;   
     margin: 0;
@@ -19,7 +21,7 @@ a{color: #000;
     padding: 0;
     width: 100vw;
 }
-/*inicio livelogo e botoes*/
+/*inicio livelogo */
 .row1mob{
     background: #fff;
     box-sizing: border-box;
@@ -40,31 +42,8 @@ a{color: #000;
     height: 35px;
     width: 100%;
 }
+/*fim livelogo */
 
-.colab{
-    background: url(./images/asideColab.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    width: 100%;
-}
-.colab:active{
-    border-bottom: solid 3px #d6a132;}
-
-.cursos{
-    background: url(./images/asideCursos.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    width: 100%;
-}
-.cursos:active{
-    border-bottom: solid 3px #029ba0;}
-    /*fim livelogo e botoes*/
 .row2{
     background: #fff;
     box-sizing: border-box;
@@ -104,11 +83,12 @@ a{color: #000;
     width: 80px;
 }
 section{
+    align-content:start;
     border-radius: 10px;
     box-shadow: gray 0px 0px 8px;
     box-sizing: border-box;
     height: 80vh;
-    display: flex;
+    display: grid;
     justify-content:center;
     margin: 0;
     padding: 0;
@@ -122,14 +102,14 @@ section{
     background: #fff;
     border-radius: 5%;
     box-sizing: border-box;
-     display: flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    height: 10%;
+    height: 50px;
     justify-content:space-evenly;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 370px;
 }
 
 .sectionhead{
@@ -152,126 +132,27 @@ section{
     margin: 0;
     padding: 0;
 }
-
-.download-btn{
-    background: url(./images/btn_baixarConteudo-mobile.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 8px;
-    cursor: pointe;
-    height: 30px;
-    outline: none;
-    width:30px;
-}
-/*start dropdown effect*/
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-.checklist-btn{
-    background: url(./images/btn_checklist-mobile.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 8px;
-    height: 30px;
-    outline: none;
-    width: 30px;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    right: 0;
-    z-index: 1;
-  }
-  .dropdown-content 
-  a:hover {background-color: #f1f1f1}
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-  }
-  /*end dropdown effect*/
-
-.checklist-tt,
-.checklist-st{
-     box-sizing: border-box;
-     margin: 0;
-     padding: 0;
-}
-/*start checkbox effect*/
-.checkmark{
+.row-dropdown{
+    align-content: center;
     background: #fff;
-    border: solid 1px #ccc;
-    height: 12px;
-    width: 12px
-}.checkmark:focus{
-    background: #d6a132;
-}
-.container {
-    display: block;
+    border-radius: 5%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 10%;
+    justify-content:space-evenly;
+    margin: 0;
+    padding: 0;
     position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #fff;
-  }
+    width: 100%;
+}
+.checklist-tt,.checklist-st{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-  
- 
-  .container input:checked ~ .checkmark {
-    background-color: #d6a132;
-  }
-  
-  
-  .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  
-  .container input:checked ~ .checkmark:after {
-    display: block;
-  }
-  
-  
-  .container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid #d6a132;
-  }      
-/*end checkbox effect*/
-
-
-    
     @media screen and (min-width:420px){
         .row1mob,.logo,.colab,.cursos{
             visibility: hidden;
