--- a/app.css
+++ b/app.css
@@ -131,7 +131,7 @@ section{
     margin: 0;
     padding: 0;
 }
-.row-dropdown{
+#dropdown{
     align-content: center;
     background: #fff;
     border-radius: 5%;
@@ -172,8 +172,69 @@ section{
 .checklist-tt,.checklist-st{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 0;;
 }
+.container{
+    display: none;
+    background: white;
+    overflow: auto;
+    position: relative;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+}
+  .show {display: block;}
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: white;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #d6a132;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid #d6a132;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
 
     @media screen and (min-width:420px){
         .row1mob,.logo,.colab,.cursos{
